# LLM-Evaluation-Project

./: .gitignore  README.md  RESULTS_OUTPUT.md  REVIEW_AND_RESULTS.md  analyze_and_report_results.py  audit_report.md  audit_report_previous.md  extract_results.py  modal_app.py  pyproject.toml  run_experiments.sh  run_fixed_experiments.sh
scripts/: create_unified_results.py
scripts/qserve/: notes.md
src/: __init__.py
src/backends/: __init__.py  backend_base.py  hf_backend.py  vllm_backend.py
src/benchmarks/: __init__.py  direct_benchmark.py  streaming_benchmark.py
src/experiments/: __init__.py  metrics.py  plots.py  profile.py  regime_sweep.py  run_suite.py  workloads.py
src/experiments/configs/: base.yaml  intervention.yaml  vllm.yaml
src/serving/: __init__.py  policies.py  scheduler.py
src/utils/: io.py  timing.py  tokenize.py  validate_logs.py
