[project]
name = "modal-serving-alpha"
version = "0.1.0"
description = "LLM serving experiments: vLLM, profiling, scheduling"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "vllm>=0.6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "numpy<2",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "jsonlines>=4.0.0",
]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
